RESOLVED FIXED75728
[BlackBerry] Log is a little to verbose for blackberry port
https://bugs.webkit.org/show_bug.cgi?id=75728
Summary [BlackBerry] Log is a little to verbose for blackberry port
Adam Treat
Reported 2012-01-06 12:24:49 PST
We are missing a return after our platform implementation which means the call to vfprintf(stderr, format, args); at the end of the function is hit.
Attachments
Fix (1.49 KB, patch)
2012-01-06 12:29 PST, Adam Treat
rwlbuis: review-
webkit.review.bot: commit-queue-
Fix v2 (1.93 KB, patch)
2012-01-09 12:31 PST, Adam Treat
manyoso: review-
manyoso: commit-queue-
Fix v3 (6.18 KB, patch)
2012-01-09 12:35 PST, Adam Treat
no flags
Fix v4 (6.35 KB, patch)
2012-01-09 13:04 PST, Adam Treat
no flags
Adam Treat
Comment 1 2012-01-06 12:29:12 PST
WebKit Review Bot
Comment 2 2012-01-06 12:31:10 PST
Attachment 121468 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/JavaScriptCore/ChangeLog', u'Source..." exit_code: 1 Source/JavaScriptCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Review Bot
Comment 3 2012-01-06 12:41:21 PST
Comment on attachment 121468 [details] Fix Rejecting attachment 121468 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 Last 500 characters of output: ueue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 70, in run_and_handle_errors self._run(tool, options, state) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/commands/stepsequence.py", line 64, in _run step(tool, options).run(state) File "/mnt/git/webkit-commit-queue/Tools/Scripts/webkitpy/tool/steps/validatereviewer.py", line 53, in run if changelog_entry.has_valid_reviewer(): AttributeError: 'NoneType' object has no attribute 'has_valid_reviewer' Full output: http://queues.webkit.org/results/11168054
Antonio Gomes
Comment 4 2012-01-06 12:42:48 PST
Comment on attachment 121468 [details] Fix another patch coming from Adam.
Rob Buis
Comment 5 2012-01-06 12:44:57 PST
Comment on attachment 121468 [details] Fix Return in middle looks strange and could give compile error/warning since the last line is unreachable.
Adam Treat
Comment 6 2012-01-09 12:31:25 PST
Created attachment 121712 [details] Fix v2 This one adds our platform's log locking feature too.
Adam Treat
Comment 7 2012-01-09 12:32:24 PST
Comment on attachment 121712 [details] Fix v2 Wrong patch.
Adam Treat
Comment 8 2012-01-09 12:35:48 PST
Adam Treat
Comment 9 2012-01-09 13:04:46 PST
Created attachment 121716 [details] Fix v4 Modify to apply against current HEAD
Rob Buis
Comment 10 2012-01-09 13:21:40 PST
Comment on attachment 121716 [details] Fix v4 View in context: https://bugs.webkit.org/attachment.cgi?id=121716&action=review LGTM > Source/JavaScriptCore/ChangeLog:14 > + uses to ensure that N threads do not trample on each other's logs. Would just say multiple threads.
Rob Buis
Comment 11 2012-01-09 13:31:51 PST
Comment on attachment 121716 [details] Fix v4 View in context: https://bugs.webkit.org/attachment.cgi?id=121716&action=review LGTM >> Source/JavaScriptCore/ChangeLog:14 >> + uses to ensure that N threads do not trample on each other's logs. > > Would just say multiple threads. Would just say multiple threads.
WebKit Review Bot
Comment 12 2012-01-09 14:06:34 PST
Comment on attachment 121716 [details] Fix v4 Clearing flags on attachment: 121716 Committed r104491: <http://trac.webkit.org/changeset/104491>
WebKit Review Bot
Comment 13 2012-01-09 14:06:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.