Log is a little to verbose for blackberry port https://bugs.webkit.org/show_bug.cgi?id=75728

The BlackBerry::Platform::Log* functions take care of the call to vfprintf
which is resulting in unintentional noise in our logs.  Add a conditional
directive to fix.

Change to using BlackBerry::Platform::logStreamV which does not insert
threading info and newlines unlike BlackBerry::Platform::log.

Finally, add log locking and unlocking which the BlackBerry platform
uses to ensure that N threads do not trample on each other's logs.

Patch by Adam Treat <atreat@rim.com> on 2012-01-09
Reviewed by Rob Buis.

* wtf/Assertions.cpp:
(WTFLogLocker::WTFReportAssertionFailure):
(WTFLogLocker::WTFReportAssertionFailureWithMessage):
(WTFLogLocker::WTFReportArgumentAssertionFailure):
(WTFLogLocker::WTFReportFatalError):
(WTFLogLocker::WTFReportError):
(WTFLogLocker::WTFLog):
(WTFLogLocker::WTFLogVerbose):

Canonical link: https://commits.webkit.org/92687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104491 268f45cc-cd09-0410-ab3c-d52691b4dbfc